# redconn

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: gh-pages.yml
docs/source/: conf.py  index.rst
src/: __init__.py
src/redconn/: __init__.py  config.py  connector.py  exceptions.py  utils.py
tests/: __init__.py  test_connector.py
